updated pom.xml